# language-nerd-api

./: .gitignore  manage.py  pyproject.toml
language_nerd_api/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
languages/: admin.py  models.py  serializers.py  urls.py  views.py
languages/migrations/: 0001_initial.py  0002_word_expression_word_languages_w_languag_5309e4_idx_and_more.py  0003_alter_word_phonetic.py  0004_alter_word_phonetic.py
training/: admin.py  models.py  serializers.py  urls.py  views.py
training/migrations/: 0001_initial.py  0002_remove_flashcard_language.py  0003_alter_flashcard_observation.py
